GridChanges and SpellCheck

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 med min sambo och hund. Jag gillar att resa
                 mycket tillsammans med familjen och är aktiv inom rugbyn i Sverige genom att sitta i styrelse, vara
                 manager och dommare. Jag har alltid hållit på
-                med lagsport vilket har hjälpt mig i mitt sammarbete med andra.
+                med lagsport vilket har hjälpt mig i mitt samarbete med andra.
                 Jag är en väldigt social tjej som gärna både arbetar och umgås med andra även om det är väldigt skönt
                 att sitta och skriva kod i sin ensamhet ibland.
                 Jag har alltid fått beröm för att vara snabb i mitt arbete samt snabb på att lära mig även om det ibland
@@ -96,7 +96,7 @@
             <h2 class="project-header" id="project2-header">Mitt första CV</h2>
             <img class="project-img" src="project2.PNG">
             <p class=project-text id="project2-text">
-                Ovan är ett egen-designat project som vi arbetade med i skolan. Jag var inte nöjd och skapade därför
+                Ovan är ett egen-designat projekt som vi arbetade med i skolan. Jag var inte nöjd och skapade därför
                 sidan du är på just nu (haha).
             </p>
             <a class="project-link" id="project-link2" href="https://github.com/Reebeecka/FirstCVRebecka"> Tryck här för att
@@ -107,8 +107,8 @@
             <h2 class="project-header" id="project3-header">Städer och Länder</h2>
             <img class="project-img" src="project3.PNG">
             <p class=project-text id="project3-text">
-                Ovan är ett JavaScript project som jag tillsammans med en grupp i skolan skapat. Projektet är uppbygt på
-                API:er där du får fram population, väder, vanlig fakta samt den senaste nyheten från ett land samt de
+                Ovan är ett JavaScript projekt som jag tillsammans med en grupp i skolan skapat. Projektet är uppbyggt på
+                APIer där du får fram population, väder, vanliga fakta samt den senaste nyheten från ett land samt de
                 tillhörande städerna till landet.
             </p>
             <a class="project-link" id="project-link3" href="https://github.com/Reebeecka/Stader-Lander"> Tryck här för
