--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 kan gå lite väl snabbt.
                 På mitt senaste arbete jobbade jag administrativt med tekniska strul, löner och ekonomiska rapporter,
                 detta har förstärkt min förmåga i problemlösning
-                med även gjort att jag har blivit duktig på excel.
+                men även gjort att jag har blivit duktig på excel.
                 Nedan ser du mina kompetenser och hur duktig jag är på dessa enligt mig själv samt några av mina projekt
                 från skolan.
                 Jag hoppas att vi ses i Oktober under min första Lia-period! Tack!
