--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 språk tror jag är CSS även om JavaScript kommer på en nära andra plats. Jag bor i Västerås tillsammans
                 med min sambo och hund. Jag gillar att resa
                 mycket tillsammans med familjen och är aktiv inom rugbyn i Sverige genom att sitta i styrelse, vara
-                manager och dommare. Jag har alltid hållit på
+                manager och domare. Jag har alltid hållit på
                 med lagsport vilket har hjälpt mig i mitt samarbete med andra.
                 Jag är en väldigt social tjej som gärna både arbetar och umgås med andra även om det är väldigt skönt
                 att sitta och skriva kod i sin ensamhet ibland.
